2014-06-04  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* ieee754r/truncd32.c (truncd): Remove duplicated function calls.

2014-06-04  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* libdecnumber/bid/decimal64.c (decimal64FromNumber): Add BID support.
	(decimal64ToNumber): Likewise.
	(decimal64FromString): Cleanup comments.

2014-06-04  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* libdecnumber/dpd/decimal128.c [decNumberShow]: Remove prototype.
	* libdecnumber/dpd/decimal32.c [decNumberShow]: Likewise.
	* libdecnumber/dpd/decimal64.c [decNumberShow]: Likewise.
	* libdecnumber/decNumber.c [decNumberShow]: Likewise.
	* libdecnumber/decDebug.h: Move decNumberShow implementation to common
	header.

2014-06-04  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* libdecnumber/dpd/decimal32.h: Move to ...
	* libdecnumber/decimal32.h: ... here.
	* libdecnumber/bid/decimal32.h: Remove file.
	* libdecnumber/dpd/decimal64.h: Move to ...
	* libdecnumber/decimal64.h: ... here.
	* libdecnumber/bid/decimal128.h: Remove file.
	* libdecnumber/dpd/decimal128.h: Move to ...
	* libdecnumber/decimal128.h: ... here.
	* libdecnumber/bid/decimal128.h: Remove file.
	* libdecnumber/dpd/decimal128Local.h: Move to ...
	* libdecnumber/decimal128Local.h: ... here.

2014-06-04  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* ieee754r/ilogbd32.c (ilogb): Use libdecnumber compare functions
	instead of _Decimal compiler generated.

2014-06-04  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* libdecnumber/decCommonSymbols.h: Remove file.
	* libdecnumber/decDPDSymbols.h: Likewise.
	* libdecnumber/decDoubleSymbols.h: Likewise.
	* libdecnumber/decPackedSymbols.h: Likewise.
	* libdecnumber/decQuadSymbols.h: Likewise.
	* libdecnumber/decSingleSymbols.h: Likewise.
	* libdecnumber/decDPD.h: Remove decDPDSymbols.h include.
	* libdecnumber/decNumberLocal.h: Remove decDPDSymbols.h and
	decCommonSymbols.h include.
